--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,7 +23,7 @@ cbor-diag = "0.1"
 libc = "0.2"
 cbor-data = "0.8"
 cborpath = "0.4"
-redis-module = { version="1.0", features = ["experimental-api"]}
+redis-module = { git = "https://github.com/mcatanzariti/redismodule-rs", features = ["experimental-api"]}
 
 [features]
 # Workaround to allow cfg(feature = "test") in redismodue-rs dependencies:
